        ninjahelper:
         . now reports error if the helper script has a syntax error or bombs out.
         . code formatting cleanup (three spaces indent)
    lib changes
	vserver:
	 . init_vservers: improved VROOTDIR detection
	 . init_vservers: test in a stricter way the real vservers availability
	 . init_vservers: canonicalize VROOTDIR (since duplicity et al.
	   don't follow symlinks)
    known bugs:
        easydialog: 
         . formDisplay does not return exit status.

version 0.9.2 -- December 29, 2005
    backupninja changes
        fixed broken toint() which caused when "everyday" problems
        backupninja.conf.5 updated to include "when" and "vservers"
        code refactor:
            . moved to lib/ some code that has to be shared between
              backupninja and ninjahelper
    handler changes
        trac:
            . mkdir subdirectory problem fixed
        duplicity:
            . globbing support fixed in include and exclude options 
            . different signing and encrypting key support added
            . fixed erroneous comments in example.dup about the way
              GnuPG-related options are used
        mysql:
            . handler vserver bugs fixed and debug output enhanced
    ninjahelper(s) changes
        vserver-related functions added to lib/vservers.in
        added man/ninjahelper.1 man page
        makecd:
            . was missing in Makefile.am/.in
        rdiff-backup:
            . used to expand '*' in default source directories
            . the "Cancel" buttons used to have a weird behaviour
            . updated to include Vserver selection 
        pgsql:
            . forbid the user to choose an empty database set 
            . "Cancel" button now does what it is meant to do
        mysql:
            . enhanced for vserver support 
            . now able to select databases and dump directory
        duplicity:
            . new handler added (with Vserver support)
